--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 :root {
     --red-color: #e00;
     --lime-color: lime;
-    --black-color: #111;
+    --black-color: #111111;
     --white-color: #fff;
 
     --bright-green-color: #6dff00ff;
@@ -9,6 +9,7 @@
     --light-lime-color: #daf200ff;
     --dark-green-color: #1c2308ff;
     --dark-brown-color: #33320dff;
+    --js-yellow-color: #f7df1e;
 }
 
 *,
@@ -20,7 +21,7 @@
 }
 
 body {
-    background-color: var(--yellow-color);
+    background-color: var(--js-yellow-color);
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -33,6 +34,7 @@ body {
 
     padding-top: 2rem;
     padding-bottom: 2rem;
+    border-radius: 12px;
 
     width: 90vw;
     margin: 0 auto;
@@ -126,4 +128,11 @@ input {
 
 .clear-btn {
     margin-top: 1.5rem;
+}
+
+.error-css {
+    color: var(--yellow-color);
+    border: 1px solid var(--red-color);
+    padding: 4px 8px;
+    margin-top: -15px;
 }
