--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,5 @@
 :root {
-    --red-color: #e00;
-    --lime-color: lime;
-    --black-color: #111111;
-    --white-color: #fff;
-
-    --bright-green-color: #6dff00ff;
-    --yellow-color: #eeff00ff;
-    --light-lime-color: #daf200ff;
-    --dark-green-color: #1c2308ff;
-    --dark-brown-color: #33320dff;
-    --js-yellow-color: #f7df1e;
+    --primary-color: #e00;
 }
 
 *,
@@ -26,113 +16,3 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.section-center {
-    background-color: var(--black-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    border-radius: 12px;
-
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 40rem;
-
-    margin-top: 10rem;
-}
-
-.todos-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
-}
-
-h3 {
-    font-size: 3rem;
-}
-span {
-    color: var(--lime-color);
-}
-
-.form-control {
-    display: flex;
-    gap: 0.25rem;
-}
-
-input {
-    padding: 0.5rem;
-    padding-left: 1rem;
-    width: 400px;
-    border: none;
-    border-radius: 15px 0 0 15px;
-    font-size: 1rem;
-}
-.submit-btn {
-    padding: 0.5rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    border: none;
-    font-size: 1rem;
-    border-radius: 0 15px 15px 0;
-    background-color: var(--lime-color);
-    color: var(--black-color);
-    font-weight: bold;
-}
-
-.clear-btn {
-    background-color: var(--red-color);
-    border: none;
-    color: var(--white-color);
-    padding: 0.5rem;
-    padding-right: 2rem;
-    padding-left: 2rem;
-    border: none;
-    font-size: 1rem;
-    border-radius: 15px;
-    font-weight: bold;
-}
-
-.todos-container {
-    margin-top: 2rem;
-    text-align: center;
-}
-
-.todo-item {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5rem;
-    border-bottom: 1px solid white;
-    width: 500px;
-    padding-bottom: 0.25rem;
-    margin-top: 1rem;
-    font-size: 1rem;
-    text-transform: capitalize;
-}
-
-.edit-btn,
-.delete-btn {
-    background-color: transparent;
-    border: 1px solid var(--lime-color);
-    padding: 0.25rem;
-    color: var(--lime-color);
-}
-
-.delete-btn {
-    color: var(--red-color);
-    border: 1px solid var(--red-color);
-    margin-left: 0.5rem;
-}
-
-.clear-btn {
-    margin-top: 1.5rem;
-}
-
-.error-css {
-    color: var(--yellow-color);
-    border: 1px solid var(--red-color);
-    padding: 4px 8px;
-    margin-top: -15px;
-}
